<resources>
    <string name="app_name">صمم</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">حسابي</string>
    <string name="profile">الملف الشخصي</string>
    <string name="rate">التقييمات</string>
    <string name="skills">المهارات</string>
    <string name="fav">المفضلة</string>
    <string name="notification">إدارة التنبيهات</string>
    <string name="bankAccount">حسابي البنكي</string>
    <string name="client">عميل</string>
    <string name="designer">مصمم</string>
    <string name="individual">فرد</string>
    <string name="company">مؤسسة</string>
    <string name="save">حفظ التعديلات</string>
    <string name="notificationText">ارسال اشعار الى بريدك الالكتروني عند</string>
    <string name="bankAccounts">حساباتي البنكية</string>
    <string name="bankName">اسم البنك</string>
    <string name="bankNum">رقم البنك</string>
    <string name="EbanNum">رقم الايبان</string>
    <string name="addAccount">أضف حساب آخر</string>
    <string name="search">بحث</string>
    <string name="comments">التعليقات</string>
    <string name="portfolio">معرض الأعمال</string>
    <string name="browseProjects">تصفح المشاريع</string>
    <string name="add_project">أضف مشروع مماثل</string>
    <string name="add_fav">أضف الى المفضلة</string>
    <string name="add_report">تبليغ عن محتوى</string>
    <string name="register">تسجيل</string>
    <string name="reg1">سوف نقوم بارسال رمز التحقق الى هاتفك الجوال</string>
    <string name="reg2">الرجاء ادخال رقم الجوال</string>
    <string name="country">الدولة</string>
    <string name="mobile">رقم الجوال</string>
    <string name="notNow">ليس الآن</string>
    <string name="next">التالي</string>
    <string name="deliever">تسليم المشروع</string>
    <string name="back">تراجع</string>
    <!--Assem-->
    <string name="cancel">الغاء</string>
    <string name="add">أضف</string>
    <string name="add_location">اضف هذا المكان كموقع لمشروعك؟</string>
    <array name="spinner_items">
        <item>التصميم الداخلي</item>
        <item>التصميم المعماري</item>
        <item>تصميم الجرافكس</item>
        <item>الرسم الجداري</item>
        <item>تصاميم الموشن</item>
    </array>

    <array name="gender_items">
        <item>ذكر</item>
        <item>أنثى</item>

    </array>


    <array name="spinner_styles">
        <item>مودرن</item>
        <item>كلاسيك</item>
        <item>نيو كلاسيك</item>
        <item>صناعي</item>
        <item>بوهيمي</item>
    </array>


    <array name="spinner_cities">
        <item>الرياض</item>
        <item>مكة</item>
        <item>المدينة المنورة</item>
        <item>بريدة</item>
        <item>تبوك</item>
        <item>الدمام</item>
        <item>الاحساء</item>
        <item>القطيف</item>
        <item>خميس مشيط</item>
        <item>الطائف</item>
        <item>نجران</item>
        <item>حفر الباطن</item>
        <item>الجبيل</item>
        <item>ضباء</item>
        <item>الخرج</item>
        <item>الثقبة</item>
        <item>ينبع البحر</item>
        <item>الخبر</item>
        <item>عرعر</item>
        <item>الحوية</item>
        <item>عنيزة</item>
        <item>سكاكا</item>
        <item>جيزان</item>
        <item>القريات</item>
        <item>الظهران</item>
        <item>الباحة</item>
        <item>الزلفي</item>
        <item>الرس</item>
        <item>وادي الدواسر</item>
        <item>بيشه</item>
        <item>سيهات</item>
        <item>شروره</item>
        <item>بحره</item>
        <item>تاروت</item>
        <item>الدوادمي</item>
        <item>صبياء</item>
        <item>بيش</item>
        <item>أحد رفيدة</item>
        <item>الفريش</item>
        <item>بارق</item>
        <item>الحوطة</item>
        <item>الأفلاج</item>
    </array>

</resources>
