<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square_shape"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_add_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_add_menu"
            android:drawableTint="#666666"
            android:text="@string/add_project"
            android:textColor="@color/gray1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_add_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_favorite"
            android:text="@string/add_fav"
            android:textColor="@color/gray1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_flag"
            android:text="@string/add_report"
            android:textColor="@color/gray1"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>