<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#09102D" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="15dp"
            android:drawableRight="@drawable/ic_register"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_arrow" />
    </RelativeLayout>


    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_corner_shape"
        android:gravity="center"
        android:padding="5dp"
        android:text="تسجيل الدخول"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/reg1"
        android:textColor="@color/gray"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/reg2"
        android:textColor="@color/gray"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mobile"
                android:textColor="@color/gray"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/square_corner_shape"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:padding="5dp"
                android:text="0598521466"
                android:textSize="17sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/country"
                android:textColor="@color/gray"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/square_corner_shape"
                android:gravity="right"
                android:padding="5dp"
                android:text="فلسطين"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/square_corner_shape"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/next"
        android:textColor="@color/gray"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_notnow"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/square_corner_shape"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/notNow"
        android:textColor="@color/gray"
        android:textSize="17sp" />

</LinearLayout>