<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.AccountNotificationFragment"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#09102D" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_person"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:padding="8dp"
            android:src="@drawable/ic_arrow" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/report_layout_shap"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/notification"
        android:textColor="@color/textGray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sentNotifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_notification"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/notificationText"
        android:textColor="@color/gray1"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sentNotifi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_shape"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="14sp" />


</RelativeLayout>