<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_padding_size_medium"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/margin_padding_size_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipToPadding="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_size_small">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_size_small"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:gravity="center"
            android:text="@string/add_location"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margin_padding_size_micro"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_size_small">

            <Button
                android:id="@+id/dialog_add_bookmark_add_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_micro"
                android:layout_weight="1"
                android:background="@drawable/blue_shape"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/dialog_add_bookmark_cancel_btn"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_micro"
                android:layout_weight="1"
                android:background="@drawable/blue_shape"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>