<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".Fragments.BankFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="#09102D" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableRight="@drawable/ic_person"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_arrow" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/report_layout_shap"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/bankAccounts"
        android:textColor="@color/textGray"
        android:textSize="@dimen/_12sdp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_bank"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                android:layout_marginTop="@dimen/_10sdp" />

            <FrameLayout
                android:id="@+id/add_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <include
                    layout="@layout/bank_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />
            </FrameLayout>


            <TextView
                android:id="@+id/tv_add_account"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/report_layout_shap"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/addAccount"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/blue_shape"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>