<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/white"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/tv_bankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:text="@string/bankName"
        android:textColor="@color/textGray"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/et_bankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_bankName"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/report_layout_shap"
        android:gravity="right"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/gray1"
        android:textSize="@dimen/_8sdp" />

    <TextView
        android:id="@+id/tv_bankNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_bankName"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/bankNum"
        android:textColor="@color/textGray"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/et_bankNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_bankNum"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/report_layout_shap"
        android:gravity="right"
        android:inputType="number"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/gray1"
        android:textSize="@dimen/_8sdp" />

    <TextView
        android:id="@+id/tv_Num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_bankNum"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/EbanNum"
        android:textColor="@color/textGray"
        android:textSize="@dimen/_10sdp" />

    <EditText
        android:id="@+id/et_kNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Num"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/report_layout_shap"
        android:gravity="right"
        android:inputType="number"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/gray1"
        android:textSize="@dimen/_8sdp" />

    <View
        android:id="@+id/bank_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/et_kNum"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/black" />

</RelativeLayout>