<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr"
    tools:context=".Fragments.AccountFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="#09102D" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableRight="@drawable/ic_person"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_arrow" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar">

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:src="@drawable/img_user" />

                <ImageView
                    android:id="@+id/img_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:src="@drawable/ic_edit" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linaer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frame_layout"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/report_layout_shap"
                    android:gravity="center"
                    android:hint="التخصص"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/textGray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/report_layout_shap"
                    android:gravity="center"
                    android:hint="الاسم"
                    android:padding="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/textGray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linaer"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/report_layout_shap"
                android:orientation="horizontal"
                android:padding="@dimen/_3sdp">

                <RatingBar
                    android:id="@+id/account_rate"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:numStars="5"
                    android:progressTint="#fed42d"
                    android:rotationY="180"
                    android:stepSize="1.0" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/rate"
                    android:textColor="@color/textGray"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linear_rate"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/gray_icon" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@drawable/report_layout_shap"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/profile"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_profile"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/report_layout_shap"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/skills"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_skills"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/report_layout_shap"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/fav"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_fav"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/report_layout_shap"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/notification"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_bankAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_notification"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/report_layout_shap"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/bankAccount"
                android:textColor="@color/textGray"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
